--- a/css/estilo-compuesto.css
+++ b/css/estilo-compuesto.css
@@ -40,7 +40,12 @@
 
 /*-------------------------MAIN---------CALENDARIO--------------------------------------*/
 
-
+.contenedor-calendario{
+    width: 90%;
+    margin: 1em auto;
+    color: pink;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
 
 
 
@@ -205,8 +210,5 @@ button {
 .medios-pago{
 padding: 55px;
 border-radius: 25%;
-
-}
-.medios-de-pago{
 
 }
