--- a/css/estilo-compuesto.css
+++ b/css/estilo-compuesto.css
@@ -150,8 +150,8 @@ button {
 }
 
 .contenedor-cuadrito {
-    width: 169px;
-    height: 250px;
+    width: 180px;
+    height: 260px;
     border: solid black 2px;
     border-radius: 20px 0px 30px;
     -webkit-box-shadow: 8px 11px 18px 0px rgba(190, 170, 207, 1);
@@ -160,29 +160,38 @@ button {
     margin: 20px;
     padding: 20px;
     background-color: rgb(249, 204, 249);
+position: relative;
+
 }
 
 .contenedor-img-cuadrito {
-    width: 100px;
-    height: 100px;
+    width: 120px;
+    height: 120px;
     border-radius: 20px 0px 30px;
-    margin: 5px;
 
-
-
+}
+.duracion{
+    margin: 1px;
+    font-family: fantasy;
 }
 
 .precio- {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: larger;
-    background-color: rgb(144, 185, 255);
+    font-size:small;
+    display: inline-block;
+    color: aliceblue;
+    position: absolute;
+    background-color: rgb(0, 0, 0);
     border-radius: 5px;
+    top: 120px;
+
 }
 
 .contenedor-informacion-cuadrito {
     width: 100px;
     height: 100px;
     margin: 5px;
+    font-size: 20px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
@@ -211,4 +220,9 @@ button {
 padding: 55px;
 border-radius: 25%;
 
+}
+.hh5{
+    display: inline-block;
+    font-size: small;
+    font-family: cursive;
 }
