--- a/css/estilo-todas-las-pag.css
+++ b/css/estilo-todas-las-pag.css
@@ -116,3 +116,26 @@ a {
 .datos {
     background-color: aliceblue;
 }
+.footerrrr{
+    display: flex;
+    width: 100%;
+    height: 10%;
+    margin: 10px;
+    justify-content: space-between;
+    flex-wrap: nowrap;
+    /* align-content: center; */
+    align-items: center;
+   background-color: rgb(11, 4, 18);
+padding: 28px;
+}
+.datos{
+    height: 200px;
+    width: 300px;
+    padding: 20px;
+    text-align: center;
+    color: chocolate;
+    font-size: x-large;
+    font-family: cursive;
+    border: solid black 2px;
+  border-radius: 30px;
+}
