--- a/css/estilo-compuesto.css
+++ b/css/estilo-compuesto.css
@@ -1,3 +1,11 @@
+
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+
+}
+
 /*-------------------MAIN-GIFTCARD---------------------------------------*/
 
 
@@ -72,6 +80,8 @@ button:not(:disabled) {
 
 .portada-tamaño {
     width: 70%;
+    position: absolute;
+    
 
 }
 
@@ -125,17 +135,17 @@ button {
 /*---------pasos----------*/
 .contenedor-pasos {
     display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    align-content: center;
-    justify-content: center;
+    flex-flow: row nowrap;
+    place-content: center;
     align-items: center;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 .paso {
-    margin: 10px 70px;
-    width: 50%;
+    width: 100%;
     height: 50%;
+    margin: 10px;
 }
 
 /*---------CUADRITOS-----------------------*/
@@ -150,18 +160,17 @@ button {
 }
 
 .contenedor-cuadrito {
-    width: 180px;
-    height: 260px;
+    width: 237px;
+    height: 294px;
     border: solid black 2px;
     border-radius: 20px 0px 30px;
-    -webkit-box-shadow: 8px 11px 18px 0px rgba(190, 170, 207, 1);
+    /* -webkit-box-shadow: 8px 11px 18px 0px rgba(190, 170, 207, 1); */
     -moz-box-shadow: 8px 11px 18px 0px rgba(190, 170, 207, 1);
     box-shadow: 8px 11px 18px 0px rgba(190, 170, 207, 1);
     margin: 20px;
     padding: 20px;
     background-color: rgb(249, 204, 249);
-position: relative;
-
+    position: relative;
 }
 
 .contenedor-img-cuadrito {
@@ -216,11 +225,7 @@ position: relative;
  font-size: 30px;
     
 }
-.medios-pago{
-padding: 55px;
-border-radius: 25%;
 
-}
 .hh5{
     display: inline-block;
     font-size: small;
