--- a/css/estilo-todas-las-pag.css
+++ b/css/estilo-todas-las-pag.css
@@ -17,7 +17,12 @@ a {
 
 
 
-.contenedor-buscador {}
+.contenedor-buscador {
+position: relative;
+    width: 100%;
+ 
+
+}
 
 .contenedor-log-bu-ca {
     display: flex;
@@ -25,24 +30,29 @@ a {
     background-color: rgb(21, 22, 47);
     text-align: center;
     padding: 25px 15px;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
+    position: relative;
+    flex-wrap: nowrap;
+    flex-direction: row;
 }
 
 .logotipo {
     border-radius: 3px;
     margin: 0px 0px 0px 20px;
     width: 100px;
+    position: relative;
 
 }
 
 .contenedor-imput {
     width: 100%;
-    position: absolute;
+    position: relative;
+   
 }
 
 .buscador-list {
-
+    position: relative;
     width: 50%;
     padding: 10px 5px;
     border-radius: 3px;
@@ -62,12 +72,14 @@ a {
 
 .contenedor-carro {
     display: flex;
+    position: relative;
+
 }
 
 .carrito {
     /*no poner position absolut aca*/
-    background-color: salmon;
-    width: 60px;
+    background-color: rgb(250, 114, 164);
+    width: 40px;
     padding: 9px;
     border-radius: 15%;
 
@@ -86,16 +98,24 @@ a {
 
 /*----------------------------------------------------------------------*/
 .contenedor-lista {
+    position: relative;
     background-color: rgb(233, 214, 251);
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
+    align-items: baseline;
     border-top: 1px solid blanchedalmond;
     border-bottom: 1px solid blanchedalmond;
-
+    display: flex;
+    width: 100%;
+    text-align: center;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-content: stretch;
 }
 
 .idem {
+  
     padding: 20px;
     list-style: none;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -119,23 +139,29 @@ a {
 .footerrrr{
     display: flex;
     width: 100%;
-    height: 10%;
     margin: 10px;
-    justify-content: space-between;
-    flex-wrap: nowrap;
-    /* align-content: center; */
-    align-items: center;
-   background-color: rgb(11, 4, 18);
-padding: 28px;
+    align-items: stretch;
+    background-color: rgb(11, 4, 18);
+    padding: 28px;
+    position: absolute;
+    flex-direction: row;
+    justify-content: center;
 }
 .datos{
-    height: 200px;
-    width: 300px;
+    width: 100%;
     padding: 20px;
-    text-align: center;
+    /* text-align: center; */
     color: chocolate;
-    font-size: x-large;
+    /* font-size: x-large; */
     font-family: cursive;
     border: solid black 2px;
-  border-radius: 30px;
+    border-radius: 30px;
+    position: relative;
+}
+.seccion-foter{
+    width: 100%;
+}
+.ppp{
+    width: 100%;
+    position: relative;
 }
