--- a/css/estilo-todas-las-pag.css
+++ b/css/estilo-todas-las-pag.css
@@ -12,6 +12,11 @@ a {
 }
 #botones{
     cursor: url(../img/mano.png), auto;
+    font-size: 24px;
+    background-color: aliceblue;
+    border: black 2px solid;
+    padding: 6px;
+    border-radius: 11px;
 }
 input{
     cursor: url(../img/mano.png), auto;
@@ -148,8 +153,13 @@ a {
     margin: 10px;
     background-color: rgb(11, 4, 18);
     padding: 28px;
-      
+    flex-wrap: nowrap;
+    align-items: stretch;
+    justify-content: space-between;
+    flex-direction: row;
 }
+      
+
 .datos{
     width: 100%;
     padding: 20px;
