--- a/css/estilo-compuesto.css
+++ b/css/estilo-compuesto.css
@@ -1,20 +1,45 @@
-/*-------------------MAIN-GIFTCARD---------------------------------------*/
-
-
-
-
-
-.contenedor2 {
-    margin: 1em 0;
+/*-------------------MAIN-GIFTCARD--------------------------------------------------------------------------------------------------*/
+/*--------------body----------------*/
+.fondito {
+    background-color: rgba(0, 255, 247, 0.21);
 }
+/*------------------------------*/
 
-.contenedor2 {
-    margin-bottom: 0.3em;
-}
 
+/*-------------necesarios para la modificacion---------------------------------------------------------------------------------------*/
+/*------------contenedor 1------------------*/
 .texto {
     text-align: center;
+} 
+
+.conte-completo-gf {
+    max-width: 100%;
+    height: auto;
+    display: flex;
+    flex-direction: row;
+    align-items: stretch;
+    margin-top: 45px;
+    margin-bottom: 190px;
+    text-align: center;
+    position: relative;
+    flex-wrap: wrap;
+    justify-content: center;
+
 }
+.contenedor1 {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    margin-right: 50px;
+
+}
+.axol{
+    width: 270px;
+    height: 160px;
+    margin-top: 30PX;
+}
+/*-----------vistaprevia es la gif vacia para modificar-------------------*/
+
 
 .vista-previa {
     background-color: #ffffff;
@@ -31,25 +56,14 @@
     box-shadow: 10px 10px 34px -2px rgb(35, 0, 25);
 }
 
+
+/*-------------es el texto modificable de la gif-----------------*/
 .personalizacion-texto{
     position: relative;
     top: -16px;
     text-shadow: 1px -1px 14px #000;
 }
-
-
-
-.parrafo-final {
-    margin-top: 48px;
-    font-family: fantasy;
-    font-size: 29px;
-    background-color: #f1f1f1;
-}
-
-.gif-para {
-    position: relative;
-    top: -49px;
-}
+/*-----------es el precio modificable de la gif-------------------*/
 .vista-previa-precio{
     font-family: auto;
     font-size: 20px;
@@ -67,33 +81,21 @@
     padding: 10px;
     font-family: fantasy;
 }
-.fondito {
-    background-color: rgba(0, 255, 247, 0.21);
-}
 
-.conte-completo-gf {
-    max-width: 100%;
-    height: auto;
-    display: flex;
-    flex-direction: row;
-    align-items: stretch;
-    margin-top: 45px;
-    margin-bottom: 190px;
-    text-align: center;
-    position: relative;
-    flex-wrap: wrap;
-    justify-content: center;
+/*---------parrafo fijo --------------------------------------*/
 
+.parrafo-final {
+    margin-top: 48px;
+    font-family: fantasy;
+    font-size: 29px;
+    background-color: #f1f1f1;
 }
 
 
-
-.contenedor1 {
-    display: flex;
-    flex-direction: column;
+/*-------
+.gif-para {
     position: relative;
-    margin-right: 50px;
-
+    top: -49px;
 }
 
 .contenedor-de-gifcard {
@@ -105,18 +107,28 @@
     margin-bottom: 80px;
 
 }
+---------*/
 
+/*----------- formulario de la gif --------------------------------------------------------------------------------------------------*/
 .contenedor2 {
     display: flex;
     width: 100%;
     position: relative;
-    margin-left: 50px;
-    flex-wrap: nowrap;
+    margin-left: 53px;
+    flex-wrap: wrap;
     flex-direction: column;
     align-items: flex-start;
     justify-content: center;
+    /* margin: 0em 0; */
+    margin-bottom: 0.3em;
+    /* align-content: center; */
+    margin-bottom: 10px;
 }
 
+
+
+
+/*--------------circulo de colores---------------*/
 .rosa {
     background-color: rgb(232, 0, 208);
     color: rgb(232, 0, 208);
@@ -164,9 +176,78 @@
     margin-bottom: 10px;
     border: solid black 1px;
 }
+.contenedor-de-colores {
+    display: flex;
+    width: 50%;
+    margin-bottom: 10px;
+    justify-content: center;
+}
 
+.contenedor-de-tamaño {
+    display: flex;
+    width: 50%;
+    margin-bottom: 10px;
+}
 
-/*CLASES COLORES DE TEXTO PARA JS*/
+.tamaño {
+    margin-bottom: 10px;
+}
+
+.monto-imput {
+    margin-bottom: 10px;
+}
+
+.contenedor-posicion {
+    display: flex;
+    width: 50%;
+
+}
+.color-titulo{
+     font-family: fantasy;
+    font-size: 30px;
+    margin-bottom: 2px;
+}
+.colorr {
+    font-family: monospace;
+    font-size: 24px;
+    margin-bottom: 2px;
+    font-style: italic;
+
+}
+
+.columna-posicion-ubicacion {
+    display: flex;
+    width: 50%;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin: 10px;
+
+}
+
+.tamaño-img-posi {
+    width: 100px;
+ 
+
+}
+
+.boton-confirmar {
+    margin-bottom: 10px;
+}
+#monto{
+   font-size: 26px;
+   padding: 3px;
+   background-color: rgb(199, 171, 234);
+}
+#nombre{
+    font-size: 26px;
+    background-color: pink;
+    padding: 7px;
+    border-radius: 2pc;
+}
+
+/*NESESARIO PARA QUE JS FUNCIONE-----------------------------------------------------------------------------------------------------*/
+/*------CLASES COLORES DE TEXTO PARA JS--------------*/
 
 
 .colorfuente1 {
@@ -190,23 +271,59 @@
 
 }
 
-/*CLASES POSICIONES DE TEXTO PARA JS*/
+/*--------CLASES POSICIONES DE TEXTO PARA JS---------------------*/
 
 .posi1 {
- 
+    border-radius: 0px 60px;
+    font-family: auto;
+    font-size: 20px;
+    display: inline-block;
+    color: #000000;
+    position: relative;
+    background-color: rgb(255 255 255);
+    top: 45px;
+    left: 1px;
+    width: 42%;
+    text-align: center;
+    padding: 10px;
+    font-family: fantasy;
 }
 
 .posi2 {
-
+    font-family: auto;
+    font-size: 20px;
+    display: inline-block;
+    color: #000000;
+    position: relative;
+    background-color: rgb(255 255 255);
+    top: 348px;
+    left: 2px;
+    width: 42%;
+    text-align: center;
+    padding: 10px;
+    font-family: fantasy;
+    border-radius: 0px 61px;
 }
 
 .posi3 {
-  
+    font-family: auto;
+    font-size: 20px;
+    display: inline-block;
+    color: #000000;
+    position: relative;
+    background-color: rgb(255 255 255);
+    top: 45px;
+    left: 203px;
+    width: 42%;
+    text-align: center;
+    padding: 10px;
+    font-family: fantasy;
+    border-radius: 65px 0px;
 }
 
 
 
-/*CLASES TAMAÑO DE TEXTO PARA JS*/
+/*---------CLASES TAMAÑO DE TEXTO PARA JS-------------------*/
 .tamaño1 {
     font-size: 20px;
 }
@@ -227,91 +344,39 @@
     font-size: 60px;
 }
 
-/*CLASES FONDOS DE TEXTO PARA JS*/
+/*-----------CLASES FONDOS DE TEXTO PARA JS----------------------*/
 .fondo1 {
     background-image: url(../img/gif1.jpg);
+ 
 }
 
 .fondo2 {
     background-image: url(../img/gif2.jpg);
+ 
 }
 
 .fondo3 {
     background-image: url(../img/gif3.jpg);
+  
 }
 
 .fondo4 {
     background-image: url(../img/gif4.jpg);
+  
 }
 
 .fondo5 {
     background-image: url(../img/gif5.jpg);
+
 }
 
 .fondo6 {
     background-image: url(../img/gif6.jpg);
-}
-
-
-
-.contenedor-de-colores {
-    display: flex;
-    width: 50%;
-    margin-bottom: 10px;
-}
-
-.contenedor-de-tamaño {
-    display: flex;
-    width: 50%;
-    margin-bottom: 10px;
-}
-
-.tamaño {
-    margin-bottom: 10px;
-}
-
-.monto-imput {
-    margin-bottom: 10px;
-}
-
-.contenedor-posicion {
-    display: flex;
-    width: 50%;
 
 }
 
-.colorr {
-    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-    font-size: 15px;
-    margin-bottom: 20px;
 
-}
 
-.columna-posicion-ubicacion {
-    display: flex;
-    width: 50%;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 10px;
-
-}
-
-.tamaño-img-posi {
-    width: 64px;
- 
-
-}
-
-.boton-confirmar {
-    margin-bottom: 10px;
-}
-#monto{
-   font-size: 20px;
-}
-#nombre{
-    font-size: 20px;
-}
 
 
 
@@ -327,7 +392,118 @@
 
 
 
-/*-----------------MAIN-----CURSO--------------------------------------------------*/
+/*-----------------MAIN-----DETALLE CURSO--------------------------------------------------*/
+/* INFO CURSO*/
+.contenedor-inf {
+    display: flex;
+    /* flex-direction: row; */
+    justify-content: flex-start;
+    margin-bottom: 35px;
+}
+
+.contenedor-imagen {
+    /* display: flex;
+    align-items: center; */
+    height: 200px;
+    width: 200px;
+    margin: 25px 20px;
+}
+
+.contenedor-inscripcion {
+    margin-left: 40px;
+    margin-top: 25px;
+    display: table-footer-group;
+    width: 400px;
+
+}
+
+.img {
+    width: 100%;
+    /* margin: 15px; */
+    height: 100%;
+    border: 5px solid black;
+
+}
+
+
+
+.cuadrito {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    width: 100%;
+    margin-top: 10px;
+
+
+}
+
+
+.datos-curso {
+    font-size: 15px;
+    text-align: start;
+    padding-bottom: 15PX;
+
+}
+
+.titulo-dato-curso {
+    font-size: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+
+}
+
+.letra-p-curso {
+    padding-top: 5px;
+}
+
+.lista-principal {
+    background-color: #ffffff;
+    font-size: 18px;
+    padding: 5px;
+    border: 1px solid black;
+
+}
+
+.lista-contenidos {
+
+    background-color: rgb(0, 0, 0);
+    padding: 5px 10px;
+    border: 1px solid rgb(205, 138, 186);
+    transform: scale(1)rotate(0deg) translate(0);
+    transition: transform 1s;
+    display: flex;
+    justify-content: space-between;
+    color: #ffffff;
+
+}
+
+.lista-contenidos:hover {
+    transform: scale(1.1) rotate(2deg) translate(3px, 0px);
+    background-color: rgb(248, 143, 178);
+}
+
+.video {
+    color: #ffffff;
+    font-style: initial;
+    display: block;
+    font-size: 20px;
+}
+
+.video:hover {
+    color: rgb(0, 0, 0);
+
+
+}
+
+.video p {
+    text-align: end;
+}
+
+.inscribirme {
+    font-size: 13px;
+    padding: 5PX;
+    border-radius: 3PX;
+
+}
 
 
 
