--- a/css/estilo-todas-las-pag.css
+++ b/css/estilo-todas-las-pag.css
@@ -152,9 +152,9 @@ a {
     width: 100%;
     margin: 10px;
     background-color: rgb(11, 4, 18);
-    padding: 28px;
+    padding: 16px;
     flex-wrap: nowrap;
-    align-items: stretch;
+    align-items: normal;
     justify-content: space-between;
     flex-direction: row;
 }
