--- a/css/estilo-todas-las-pag.css
+++ b/css/estilo-todas-las-pag.css
@@ -154,9 +154,8 @@ position: relative;
     background-color: rgb(11, 4, 18);
     padding: 16px;
     flex-wrap: nowrap;
-    align-items: normal;
-    justify-content: space-between;
-    flex-direction: row;
+    align-items: stretch;
+    
 }
       
 
