--- a/css/formulario.css
+++ b/css/formulario.css
@@ -1,8 +1,3 @@
-
-
-
-
-
 /*-----------------MAIN---FORMULARIO----------------------------------------------------------------------------------------------------------*/
 .contenedor-formulario {
 
@@ -63,10 +58,11 @@
 
 .linea img {
     width: 30px;
-   
+
     margin: 8px;
 }
-.linea1{
+
+.linea1 {
     width: 100%;
     display: flex;
     flex-direction: row;
@@ -82,12 +78,14 @@
     margin: 8px;
 
 }
-#form{
+
+#form {
     display: flex;
     flex-direction: column;
     align-items: flex-start;
 }
-.signo-mas{
+
+.signo-mas {
     display: flex;
     justify-content: flex-end;
     align-items: center;
@@ -99,57 +97,183 @@
     background-color: #0000ff00;
     border: none;
 }
-.img-sig-mas{
+
+.img-sig-mas {
     width: 10%;
 }
-.popup d-none{
+
+.popup d-none {
     background-color: grey;
     width: 50%;
     height: 300px;
     text-align: center;
     position: fixed;
-    z-index:2;
-    top:30px;
-    display:none;
+    z-index: 2;
+    top: 30px;
+    display: none;
 }
-.d-none{
+
+.d-none {
     display: none;
 }
 
 
 /*js formulario*/
 
-input[type="submit"]{
+input[type="submit"] {
     display: block;
     float: right;
     padding: 0.5em;
     margin: 1em;
 }
-input.error{
-    border:1px solid crimson;
+
+input.error {
+    border: 1px solid crimson;
 }
-#mensaje{
+
+#mensaje {
     margin-top: 2em;
 }
-#mostrar{
+
+#mostrar {
     padding: 0.5em;
 }
-.oculto{
+
+.oculto {
     display: none;
 }
-.condiciones{
+
+.condiciones {
     margin-top: 0.5em;
 }
-.color-error{
+
+.color-error {
     color: crimson;
 }
-#agregar-fila{
+
+
+
+
+
+
+
+
+
+/*MODAL*/
+
+.modal {
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.637);
+    display: flex;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    align-items: center;
+    overflow: auto;
+    transition: opacity .6s;
+    --transform: translatey(-100vh);
+    --transition: transform .8s;
+}
+
+/*creo una clase modificadora*/
+
+.modal--show {
+    opacity: 1;
+    pointer-events: unset;
+    transition: opacity .6s;
+    --transform: translatey(0);
+    --transition: transform .8s .8s;
+    z-index: 13;
+    position: fixed;
 
 }
 
+#modal_contenedor {
+    background-color: antiquewhite;
+    display: grid;
+    gap: 1em;
+    place-items: center;
+    grid-auto-columns: 100%;
+    margin: 11%;
+    padding: 14px;
+    width: 80%;
+    text-align: center;
+    border-radius: 5px;
+    transform: var(--transform);
+    transition: var(--transition);
+    position: fixed;
 
+}
 
+.no-modal {
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.637);
+    display: flex;
+    left: 0;
+    top: 0;
+    width: 0;
+    height: 0;
+    align-items: center;
+    overflow: auto;
+    transition: opacity .6s;
+    --transform: translatey(-100vh);
+    --transition: transform .8s;
+}
 
+.modal_titulo {
+    font-size: 2em;
+    text-align: center;
+    font-family: fantasy;
+}
 
+.modal_img {
+    width: 98%;
+    max-width: 170px;
+}
+.contenedor_botones{
+    display: flex;
+}
 
+.cerrar_modal1 {
+    text-decoration: none;
+    background-color: rgb(75 194 255);
+    padding: 1em 3em;
+    border: 1px solid;
+    border-radius: 6px;
+    display: inline-block;
+    font-weight: 300;
+    transition: background-color.3s;
+    text-align: start;
+}
 
+.cerrar_modal {
+    text-decoration: none;
+    background-color: rgb(255 183 226);
+    padding: 1em 3em;
+    border: 1px solid;
+    border-radius: 6px;
+    display: inline-block;
+    font-weight: 300;
+    transition: background-color.3s;
+    text-align: start;
+
+}
+
+.cerrar_modal1:hover {
+    color: rgb(0, 121, 55);
+    background-color: rgb(0, 0, 0);
+
+}
+
+.cerrar_modal:hover {
+    color: rgb(132, 0, 255);
+    background-color: rgb(0, 0, 0);
+
+}
+
+.d-none {
+    display: none;
+}
