--- a/css/index.css
+++ b/css/index.css
@@ -98,57 +98,59 @@ button {
     justify-content: space-evenly;
     align-items: center;
     width: 100%;
-
+    align-content: space-around;
 
 }
 
 .contenedor-cuadrito {
-    width: 275px;
-    height: 350px;
+    width: 24%;
     border: solid black 2px;
     border-radius: 20px 0px 30px;
-
-    box-shadow: 8px 11px 18px 0px rgba(190, 170, 207, 1);
-    margin: 20px;
-    padding: 20px;
-    background-color: rgb(152, 106, 175);
+    box-shadow: 8px 11px 18px 0px rgb(46, 8, 80);
+    margin: 25px;
+    padding: 10px;
+    background-color: rgba(130, 110, 203, 0.4);
     position: relative;
+
 }
 
-.contenedor-img-cuadrito {
-    width: 230px;
-    height: 230px;
-    border-radius: 20px 0px 30px;
-    max-width: 100%;
+.contenedor-curso-cuadrito {}
 
+.contenedor-img-cuadrito {
+    width: 100%;
+
+    max-width: 100%;
+    border-radius: 20px 0px 30px;
 
 
 }
 
 .duracion {
     margin: 1px;
-    font-family: fantasy;
+    font-size: x-small;
+    font-family: initial;
+    width: 100%;
+    max-width: 100%;
 }
 
+
 .precio- {
-    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    font-size: x-large;
+    font-family:fantasy;
     display: inline-block;
-    color: #f3ff00;
+    color: #000000;
     position: absolute;
-    background-color: rgb(0, 0, 0);
+    background-color: rgb(131, 171, 0);
     border-radius: 5px 0px;
     top: 16px;
     left: 5px;
 }
 
 .contenedor-informacion-cuadrito {
-
     position: relative;
     margin: 5px;
-    font-size: 20px;
+    font-size: 22px;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-
+    top: -9px;
 }
 
 .ver-detalle {
@@ -158,12 +160,14 @@ button {
     margin: 10px 0px 5px 0px;
     color: rgb(255, 255, 255);
 
+    max-width: 100%;
 }
 
 .tex-curso {
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 40px;
+    max-width: 100%;
 
 }
 
@@ -176,16 +180,35 @@ button {
 
 .hh5 {
     display: inline-block;
-    font-family: cursive;
-    font-size: 15px;
+    font-family: fantasy;
+    font-size: 18px;
+    width: 100%;
+    max-width: 100%;
+
+}
+
+.boton-cartelito {
+    background-color: rgb(255, 226, 231);
+    position: relative;
+    top: -14px;
+    padding: 4px;
+    border-radius: 6em;
+    position: relative;
+    width: 100%;
+    text-decoration: none;
+    color: #000000;
 
 
+}
+.boton-cartelito:hover {
+    color:white;
+    background-color: chocolate;
 }
 
 
 /*MODAL*/
 
-.modal{
+.modal {
     bottom: 0;
     right: 0;
     background-color: rgba(0, 0, 0, 0.637);
@@ -198,7 +221,7 @@ button {
     overflow: auto;
     transition: opacity .6s;
     --transform: translatey(-100vh);
-    --transition:transform .8s ;
+    --transition: transform .8s;
 }
 
 /*creo una clase modificadora*/
@@ -208,27 +231,43 @@ button {
     pointer-events: unset;
     transition: opacity .6s;
     --transform: translatey(0);
-    --transition:transform .8s .8s;
+    --transition: transform .8s .8s;
     z-index: 13;
     position: fixed;
+
 }
 
-.modal_contenedor {
+#modal_contenedor {
     background-color: antiquewhite;
     display: grid;
     gap: 1em;
     place-items: center;
     grid-auto-columns: 100%;
-    margin: auto;
-    padding: 20px;
+    margin: 11%;
+    padding: 14px;
     width: 80%;
-    max-width: 400px;
     text-align: center;
     border-radius: 5px;
-    position: relative;
     transform: var(--transform);
-    transition: var(--transition)
+    transition: var(--transition);
+    position: fixed;
 
+}
+
+.no-modal {
+    bottom: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.637);
+    display: flex;
+    left: 0;
+    top: 0;
+    width: 0;
+    height: 0;
+    align-items: center;
+    overflow: auto;
+    transition: opacity .6s;
+    --transform: translatey(-100vh);
+    --transition: transform .8s;
 }
 
 .modal_titulo {
@@ -259,4 +298,8 @@ button {
     color: rgb(62, 0, 121);
     background-color: rgb(242, 223, 255);
 
+}
+
+.d-none {
+    display: none;
 }
